fixed survey layout issue

--- a/stuff/less/survey.less
+++ b/stuff/less/survey.less
@@ -106,6 +106,10 @@
           background-color: rgba(0,0,0,0.1);
         }
       }
+      .actions {
+        height: 25px;
+        margin-top: 10px;
+      }
     }
 
 
